# social_analysis

./: .gitignore  README.md  neo4j-docker.sh  prepare_data.sh  pyproject.toml  requirements.txt  run_analysis.sh
dataset/neo4j_import/: import_command.sh
scripts/: analysis_01_engagement.py  analysis_02_content.py  analysis_03_communities.py  analysis_04_bots.py  import_command.sh  import_initial_data.cypher  neo4j_base.py  prepare_data_01.py  prepare_data_02.py  prepare_data_03.py  prepare_data_04.py  temp.py
